Literally worst commit ever

--- a/Documentation/latex/_a_d_c__lib_8c.tex
+++ b/Documentation/latex/_a_d_c__lib_8c.tex
@@ -73,14 +73,12 @@ V1.\+0.\+0
 
 Получение уровня напряжение с АЦП 
 
-Подсчёт напряжения происходит в рассчете на то, что на вход приходит напряжение с добавленной константой \mbox{[}INPUT\+\_\+\+AMPLITUDE/2\mbox{]}, которую нужно игнорировать
-
 
 \begin{DoxyRetVals}{Return values}
-{\em Напряжение} & в милливольтах \\
+{\em Real\+Voltage} & напряжение в милливольтах\\
 \hline
 \end{DoxyRetVals}
-
+Подсчёт напряжения происходит в рассчете на то, что на вход приходит напряжение с добавленной константой \mbox{[}INPUT\+\_\+\+AMPLITUDE/2\mbox{]}, которую нужно игнорировать. Такая константа добавляется внешней платой МСД-\/ТМ (подключение и принцип работы описан в README.\+md) и необходима в силу того, что АЦП контроллера Geehy отсутсвует возможность приёма сигнала с отрицательным напряжением. Другими словами, МСД-\/ТМ \"{}поднимает\"{} входной сигнал таким образом, чтобы он был всегда \texorpdfstring{$>$}{>}= 0, далее ту константу, которую прибавили к сигналу, вычитаем программно 
 
 \doxysubsection{Variable Documentation}
 \Hypertarget{_a_d_c__lib_8c_a507a5dce40d4476e8a27e3eda3bc300c}\label{_a_d_c__lib_8c_a507a5dce40d4476e8a27e3eda3bc300c} 
