--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -207,8 +207,12 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \input{index}
+\chapter{Data Structure Index}
+\input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Data Structure Documentation}
+\input{struct_min_max_struct}
 \chapter{File Documentation}
 \input{_a_d_c__lib_8c}
 \input{_a_m_p_8c}
@@ -217,6 +221,7 @@
 \input{font__lib_8c}
 \input{_l_c_d__lib_8c}
 \input{main_8c}
+\input{_signal_receive_handler_8c}
 \input{_s_p_i__lib_8c}
 \input{_u_a_r_t__lib_8c}
 \input{_w_d_t__lib_8c}
