--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -7,6 +7,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{font__lib_8c}{font\+\_\+lib.\+c}} \\*Функции для работы со шрифтом }{\pageref{font__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_l_c_d__lib_8c}{LCD\+\_\+lib.\+c}} \\*Функции для работы с LCD экраном }{\pageref{_l_c_d__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{main_8c}{main.\+c}} \\*Main фунция }{\pageref{main_8c}}{}
+\item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_signal_receive_handler_8c}{Signal\+Receive\+Handler.\+c}} \\*Функции, обеспечивающие приём АРСФ пакетов (обнаружение пакетов, регистрация и обработка ложных срабатываний) }{\pageref{_signal_receive_handler_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_s_p_i__lib_8c}{SPI\+\_\+lib.\+c}} \\*Функции для работы с SPI }{\pageref{_s_p_i__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_u_a_r_t__lib_8c}{UART\+\_\+lib.\+c}} \\*Функции для работы с USART }{\pageref{_u_a_r_t__lib_8c}}{}
 \item\contentsline{section}{Documents/\+Keil/\+DQPSK\+\_\+plus\+\_\+\+Freq/\+Source/\mbox{\hyperlink{_w_d_t__lib_8c}{WDT\+\_\+lib.\+c}} \\*Функции для работы со сторожевым таймером IWDT }{\pageref{_w_d_t__lib_8c}}{}
